# routes/api.php
@@ -19,19 +19,41 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 
 
 
-# the api routes version 1
-Route::group(array('namespace' => 'Api' ), function() {
-	Route::post('users/fblogin', 'UsersController@fblogin');
-	Route::post('room/detail','RoomsController@rdetail');
-	Route::post('jagga/detail','JaggasController@jdetail');
-	Route::post('room/search','RoomsController@search');
+// # the api routes version 1
+// Route::group(array('namespace' => 'Api' ), function() {
+// 	Route::post('users/fblogin', 'UsersController@fblogin');
+// });
 
+
+
+// # all routes which requires accesstoken
+// Route::group(array('middleware' =>['accesstokenchecker'], 'namespace' => 'Api' ), function() {
+// 	Route::post('users/logout', 'UsersController@logout');
+// 	Route::post('room/add','RoomsController@addRoom');
+// 	Route::patch('room/update-room','RoomsController@updateRoom');
+// 	Route::post('jagga/add','JaggasController@addJagga');
+// 	Route::patch('jagga/update-jagga','JaggasController@updateJagga');
+// 	Route::delete('room/delete','RoomsController@deleteRoom');
+// 	Route::delete('jagga/delete','JaggasController@deleteJagga');
+
+// });
+
+Route::group(array('prefix' => 'v1/' ), function() {
+
+
+# the api routes version 1
+Route::group(array('namespace' => 'Api\V1' ), function() {
+	Route::post('users/fblogin', 'UsersController@fblogin');
+
+
+	Route::get('room/search-room','RoomsController@searchRoom');
+	Route::post('jagga/search-jagga','JaggasController@searchJagga');
 });
 
 
 
 # all routes which requires accesstoken
-Route::group(array('middleware' =>['accesstokenchecker'], 'namespace' => 'Api' ), function() {
+Route::group(array('middleware' =>['accesstokenchecker'], 'namespace' => 'Api\V1' ), function() {
 	Route::post('users/logout', 'UsersController@logout');
 	Route::post('room/add','RoomsController@addRoom');
 	Route::post('room/update-room','RoomsController@updateRoom');
@@ -39,5 +61,9 @@ Route::group(array('middleware' =>['accesstokenchecker'], 'namespace' => 'Api' )
 	Route::post('jagga/update-jagga','JaggasController@updateJagga');
 	Route::post('room/delete','RoomsController@deleteRoom');
 	Route::post('jagga/delete','JaggasController@deleteJagga');
+
+	Route::post('room/my-rooms','RoomsController@myRooms');
+
+});
 
 });
