# routes/web.php
@@ -14,3 +14,20 @@
 Route::get('/', function () {
     return view('welcome');
 });
+
+# the api routes version 1
+// Route::group(array('namespace' => 'Api/V1'), function() {
+//     Route::get('/api/room/detail','RoomsController@rdetail');
+// 	Route::get('/api/jagga/detail','JaggasController@jdetail');
+// 	Route::get('/api/room/search','RoomsController@search');
+
+// });
+
+
+Auth::routes();
+
+Route::get('/home', 'HomeController@index')->name('home');
+
+Auth::routes();
+
+Route::get('/home', 'HomeController@index')->name('home');
